# HgEngine

./: .gitignore  CMakeLists.txt  HgEngine.vcxproj  HgEngine.vcxproj.filters  HgEngine2D.vcxproj  HgEngine2D.vcxproj.filters
hg/Cache/: CacheSystem.cpp  CacheSystem.hpp
hg/Core/: BuildConfig.hpp  Component.cpp  Component.hpp  Engine.cpp  Engine.hpp  JSONObject.cpp  JSONObject.hpp  Node.cpp  Node.hpp  Node2D.hpp  Node3D.cpp  Node3D.hpp  Object.cpp  Object.hpp
hg/GUI/: Font.cpp  Font.hpp  GUIButton.cpp  GUIButton.hpp  GUIImage.cpp  GUIImage.hpp  GUILabel.cpp  GUILabel.hpp  GUISystem.cpp  GUISystem.hpp  GUIWidget.cpp  GUIWidget.hpp
hg/Graphics/: BlendState.cpp  BlendState.hpp  Buffer.cpp  Buffer.hpp  DepthStencilState.cpp  DepthStencilState.hpp  GraphicsDefs.cpp  GraphicsDefs.hpp  PixelShader.cpp  PixelShader.hpp  RasterizerState.cpp  RasterizerState.hpp  RenderDevice.cpp  RenderDevice.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Texture2D.cpp  Texture2D.hpp  Texture2DArray.cpp  Texture2DArray.hpp  VertexFormat.cpp  VertexShader.cpp  VertexShader.hpp
hg/Renderer/: D3D11RenderSystem.cpp  GL4RenderSystem.cpp  RenderDevice.cpp  RenderDevice.hpp  RenderSystem.cpp  RenderSystem.hpp  RenderSystem2D.cpp  RenderSystem2D.hpp
hg/Scene/: Node2D.cpp  Node2D.hpp  Node3D.hpp
hg/Sound/: SoundSystem.cpp  SoundSystem.hpp
hg2d/Cache/: CacheSystem.cpp  CacheSystem.hpp
hg2d/Core/: AEngineObject.hpp  BuildConfig.hpp  Engine.cpp  Engine.hpp  Factory.cpp  Factory.hpp  JSONObject.cpp  JSONObject.hpp  Node.cpp  (+3 more)
imgui/: imconfig.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
(+155 files in other folders)
